@@ -2291,12 +2291,6 @@ void check_state(
     ICount = 0;
     }
 
-  /* clear node state and node messages */
-
-  internal_state &= ~INUSE_DOWN;
-
-  PBSNodeMsgBuf[0] = '\0';
-
   /* conditions:  external state should be down if
      - inadequate file handles available (for period X)
      - external health check fails
@@ -2338,6 +2332,13 @@ void check_state(
 
     if (ICount == 0)
       {
+      /* only clear when we're checking again */
+      /* clear node state and node messages */
+
+      internal_state &= ~INUSE_DOWN;
+
+      PBSNodeMsgBuf[0] = '\0';
+
       if (MUReadPipe(
             PBSNodeCheckPath,
             tmpPBSNodeMsgBuf,
