@@ -5,6 +5,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       in pbsdsh.c. This fixes bug 79.
   e - allow input of walltime in the format of [DD]:HH:MM:SS (backported from
       2.5.2)
+  b - only clear the mom state when actually running the health check script
+      (backported from 2.5.3)
+  b - don't try to set the user id multiple times - (backported from 2.5.3)
 
 2.4.10
   b - fix to get new pagg ID and add additional CSA records when restarting from
